--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "no-var": 1,
     "new-cap": 0,
     "vars-on-top": 0,
+    "max-len": 1,
     "arrow-body-style": [0, "as-needed"],
     "comma-dangle": [0, "never"],
     "no-unused-vars": [0, {"vars": "local", "args": "none"}],
