existing working, uploading almost done

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.7.10",
+    "mime-types": "^2.1.13",
     "minimist": "^1.2.0"
   },
   "devDependencies": {
